--- a/wgs.yaml
+++ b/wgs.yaml
@@ -27,6 +27,9 @@ resource:
   bqsr: -l vf=10G,p=1 -binding linear:1
   bamdst: -l vf=4G,p=1 -binding linear:1
   HaplotypeCaller: -l vf=4G,p=2 -binding linear:2
+  bcftools: -l vf=4G,p=1 -binding linear:1
+  vqsr: -l vf=4G,p=1 -binding linear:1
+  merge_vcf: -l vf=4G,p=1 -binding linear:1
 
 parameters:
   fastp: --thread 4 -s 15
@@ -42,6 +45,16 @@ parameters:
    --known-sites /zfssz2/BC_RD_P3/BC_RDC1/liufengxia/pipeline/WGS_PIPE_update_cnv/tools/bundle/dbsnp_138.hg19.vcf.gz \
    --known-sites /zfssz2/BC_RD_P3/BC_RDC1/liufengxia/pipeline/WGS_PIPE_update_cnv/tools/bundle/Mills_and_1000G_gold_standard.indels.hg19.sites.vcf
   HaplotypeCaller: --correct-overlapping-quality true -A BaseQuality -A MappingQuality -A QualByDepth -A MappingQualityRankSumTest -A ReadPosRankSumTest -A FisherStrand -A StrandOddsRatio -A InbreedingCoeff
+  bcftools_concat: concat -a -D -q 30 -O z
+  vqsr_snp: |
+   -an DP -an QD -an MQ -an MQRankSum -an ReadPosRankSum -an FS -an SOR \
+   --resource hapmap,known=false,training=true,truth=true,prior=15.0:/zfssz2/BC_RD_P3/BC_RDC1/liufengxia/pipeline/WGS_PIPE_update_cnv/tools/bundle/hapmap_3.3.hg19.sites.vcf.gz \
+   --resource omni,known=false,training=true,truth=false,prior=12.0:/zfssz2/BC_RD_P3/BC_RDC1/liufengxia/pipeline/WGS_PIPE_update_cnv/tools/bundle/1000G_omni2.5.hg19.sites.vcf.gz \
+   --resource 1000G,known=false,training=true,truth=false,prior=10.0:/zfssz2/BC_RD_P3/BC_RDC1/liufengxia/pipeline/WGS_PIPE_update_cnv/tools/bundle/1000G_phase1.snps.high_confidence.hg19.sites.vcf.gz \
+   --resource dbsnp,known=true,training=false,truth=false,prior=2.0:/zfssz2/BC_RD_P3/BC_RDC1/liufengxia/pipeline/WGS_PIPE_update_cnv/tools/bundle/dbsnp_138.hg19.vcf.gz
+  vqsr_indel: |
+   -an DP -an QD -an MQ -an MQRankSum -an ReadPosRankSum -an FS -an SOR \
+   -resource mills,known=true,training=true,truth=true,prior=12.0:/zfssz2/BC_RD_P3/BC_RDC1/liufengxia/pipeline/WGS_PIPE_update_cnv/tools/bundle/Mills_and_1000G_gold_standard.indels.hg19.sites.vcf
 
 database:
   hg19: /hwfssz1/ST_MCHRI/CLINIC/SOFTWARES/analysis_pipeline/HPC_chip/db/aln_db/hg19/hg19_chM_male_mask.fa
